[package]
name = "sbs-api"
version = "0.1.15"
edition = "2021"
license = "MIT"
description = "Simple binary serialization api"
documentation = "https://docs.rs/sbs-api"
repository = "https://github.com/ZakGoedegebuur/sbs-api"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sbs-api-internal = "0.1.1"
sbs-api-macro = "0.1.14"